org.eclipse.jdt.ui.tests.refactoring/resources/InlineMethodWorkspace/TestCases/invalid/TestCompileError2.java
package invalid;

public class TestCompileError2 {
	public void main() {
		/*]*/foo();/*[*/
	}
	
	public void foo() {
		main()
	}
}
